@@ -1,11 +1,11 @@
 #!/bin/sh
 # Lexicon / Dictionary regularization tests to make sure we pad and lookup correctly
 
-rm -rf ldr12n/
-mkdir -p ldr12n/mods.d
-mkdir -p ldr12n/modules
+rm -rf tmp/ldr12n/
+mkdir -p tmp/ldr12n/mods.d
+mkdir -p tmp/ldr12n/modules
 
-cat > ldr12n/mods.d/ldr12n.conf <<!
+cat > tmp/ldr12n/mods.d/ldr12n.conf <<!
 [ldr12n]
 DataPath=./modules/ldr12n
 ModDrv=RawLD
@@ -15,7 +15,7 @@ Lang=en
 StrongsPadding=false
 !
 
-cat > ldr12n/mods.d/ldr12np.conf <<!
+cat > tmp/ldr12n/mods.d/ldr12np.conf <<!
 [ldr12np]
 DataPath=./modules/ldr12np
 ModDrv=RawLD
@@ -25,7 +25,7 @@ Lang=en
 StrongsPadding=true
 !
 
-../../utilities/imp2ld ldr12n.imp -P -o ldr12n/modules/ldr12n 2>&1 | grep -v \$Rev
-../../utilities/imp2ld ldr12n.imp -o ldr12n/modules/ldr12np 2>&1 | grep -v \$Rev
+../../utilities/imp2ld ldr12n.imp -P -o tmp/ldr12n/modules/ldr12n 2>&1 | grep -v \$Rev
+../../utilities/imp2ld ldr12n.imp -o tmp/ldr12n/modules/ldr12np 2>&1 | grep -v \$Rev
 
-cd ldr12n && ../../ldtest ldr12n && ../../ldtest ldr12np
+cd tmp/ldr12n && ../../../ldtest ldr12n && ../../../ldtest ldr12np
